--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "azure-storage": "^2.10.3",
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "guid": "^0.0.12",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sendgrid": "^2.0.0",
